frontend/tests/errors/ER-029/fixed_muldiv_64_not_implemented/test.vx
!!a:#u32.32;
!!b:#u32.32;

&^main() -> #i32 {
  (a && b) ? 1 : 0
}
